--- a/myWedding/languages/newlyweds.pot
+++ b/myWedding/languages/newlyweds.pot
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
-"Project-Id-Version: Newlyweds\n"
+"Project-Id-Version: MyWedding\n"
 "POT-Creation-Date: 2017-11-17 12:29+0100\n"
 "PO-Revision-Date: 2017-09-09 22:00+0200\n"
 "Last-Translator: Alina Sava <admin@glam.ink>\n"
